--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,8 +14,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #1c1c22;
+    --foreground: #03c3ff;
   }
 }
 
